[tool.poetry]
name = "hw"
version = "0.1.0"
description = ""
authors = ["Viktor <asgardcasting@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
fastapi = "^0.115.5"
psycopg2 = "^2.9.10"
alembic = "^1.14.0"
pydantic = "^2.10.1"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
libgravatar = "^1.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
